--- a/theme-changer/index.html
+++ b/theme-changer/index.html
@@ -37,5 +37,8 @@
 </body>
 <script>
     console.log("hello js");
+    const button =  document.querySelectorAll('.buttons')
+    const body = document.querySelector('body')
+    
 </script>
 </html>
