--- a/calculator/index.html
+++ b/calculator/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css" />
 </head>
 <body>
     <div class="base">
         <div class="upper">
-            <input type="text" id="result"> 
+            <p><input type="text" id="result" /></p>
         </div>
         <div class="lower1">
             <button id="1">1</button>
@@ -36,8 +36,6 @@
             
         </div>
     </div>
-
     <script src="script.js"></script>
-
 </body>
 </html>
