--- a/bmi_calculator/index.html
+++ b/bmi_calculator/index.html
@@ -4,56 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="../styles.css" />
     <title>BMI Calculator</title>
-    <style>
-        .container {
-  width: 575px;
-  height: 825px;
-
-  background-color: #797978;
-  padding-left: 30px;
-}
-#height,
-#weight {
-  width: 150px;
-  height: 25px;
-  margin-top: 30px;
-}
-
-#weight-guide {
-  margin-left: 75px;
-  margin-top: 25px;
-}
-
-#results {
-  font-size: 35px;
-  margin-left: 90px;
-  margin-top: 20px;
-  color: rgb(241, 241, 241);
-}
-
-button {
-  width: 150px;
-  height: 35px;
-  margin-left: 90px;
-  margin-top: 25px;
-  background-color: #fff;
-  padding: 1px 30px;
-  border-radius: 8px;
-  color: #212121;
-  text-decoration: none;
-  border: 2px solid #212121;
-
-  font-size: 25px;
-}
-
-h1 {
-  padding-left: 15px;
-  padding-top: 25px;
-  
-}
-
-    </style>
   </head>
   <body>
     <div class="container">
@@ -72,7 +25,5 @@ h1 {
       </form>
     </div>
   </body>
-  <script>
-    
-  </script>
+  <script src="script.js"></script>
 </html>
