--- a/calculator/index.html
+++ b/calculator/index.html
@@ -8,31 +8,32 @@
 </head>
 <body>
     <div class="base">
-        <div class="upper">
-            <p><input type="text" id="result" /></p>
+        <div class="upper" id="enter">
+            <p id="results">0</p>
         </div>
         <div class="lower1">
-            <button id="1">1</button>
-            <button id="2">2</button>
-            <button id="3">3</button>
-            <button>+</button>
+            <button value="1">1</button>
+            <button value="2">2</button>
+            <button value="3">3</button>
+            <button value="+">+</button>
         </div>
         <div class="lower2">
-            <button id="4">4</button>
-            <button id="5">5</button>
-            <button id="6">6</button>
-            <button>-</button>
+            <button value="4">4</button>
+            <button value="5">5</button>
+            <button value="6">6</button>
+            <button value="-">-</button>
         </div>
         <div class="lower3">
-            <button id="7">7</button>
-            <button id="8">8</button>
-            <button id="9">9</button>
-            <button>x</button>
+            <button value="7">7</button>
+            <button value="8">8</button>
+            <button value="9">9</button>
+            <button value="*">x</button>
         </div>
         <div class="lower4">
-            <button id="0">0</button>
-            <button class="calculate">Calculate</button>
-            <button>/</button>
+            <button value="0">0</button>
+            <button value="=">=</button>
+            <button value="delete">CLS</button>
+            <button value="/">/</button>
             
         </div>
     </div>
